--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div> 
                 <div class = "col-12 col-sm-6">
-                    <div class="col-12 col-sm align-self-center">
-                        <img src="img/logo.png" class="img-fluid">
+                    <div class="row">
+                        <div class="col-12 col-sm-6 align-self-center">
+                            <img src="img/logo.png" class="img-fluid">
+                        </div>
+                        <div class="col-12 col-sm-6 align-self-center my-5">
+                            <a href="#ReserveMyTable">
+                                <button type="button" class="btn btn-sm reserveCol"><h5 class="fontblack align-self-center">Reserve Table</h5></button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -58,7 +65,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span>   <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -67,15 +74,24 @@
                 </div>
             </div>
         </div>
-
+        <!-- <h2>Weekend Grand Buffet</h2>
+        <p> -->
+    
 
         <div class = "row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
+            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class ="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class = "col col-sm col-md order-sm-last">
+                <div class="media">
+                    
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person</p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -100,6 +116,66 @@
                             </p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="offset-md-2 col-12 col-md-8">
+                <card id="ReserveMyTable border-p">
+                    <h3 class="card card-header reserveCol border-p">
+                        <strong>Reserve a Table</strong>
+                    </h3>
+                    <div class="card-body border-p">
+                        <div class="row">
+                            <div class="col-sm-3 col-12">
+                                Number of Guests
+                            </div>
+                            <div class="col-auto">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">1</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">2</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                    <label class="form-check-label" for="inlineRadio3">3</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                    <label class="form-check-label" for="inlineRadio4">4</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                    <label class="form-check-label" for="inlineRadio5">5</label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                    <label class="form-check-label" for="inlineRadio6">6</label>
+                                  </div>
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-sm-4 col-12 align-self-center">
+                                Date and time
+                            </div>
+                            <div class="col-sm-4 col-12 align-self-center">
+                                <input type="date" class="form-control" id="date" name="date">
+                            </div>
+                            <div class="col-sm-4 col-12">
+                                <input type="time" class="form-control" id="time" name="time">
+                            </div>
+                        </div>
+                        <div class="row my-5">
+                            <div class="offset-md-4 col-auto">
+                                <button type="button" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </card>
             </div>
         </div>
     </div>
