--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                             <img src="img/logo.png" class="img-fluid">
                         </div>
                         <div class="col-12 col-sm-6 align-self-center my-5">
-                            <a href="#ReserveMyTable">
-                                <button type="button" class="btn btn-sm reserveCol"><h5 class="fontblack align-self-center">Reserve Table</h5></button>
+                                <!-- <button type="button" class="btn btn-sm reserveCol"> -->
+                                    <a role="button" class="btn btn-block nav-link btn-warning"
+                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-placement="bottom" href="#ReserveForm">Reserve Table</a>
+                                <!-- </button> -->
                             </a>
                         </div>
                     </div>
@@ -118,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-items-center">
+        <div class="row row-content align-items-center" id = "ReserveForm">
             <div class="offset-md-2 col-12 col-md-8">
                 <card id="ReserveMyTable border-p">
                     <h3 class="card card-header reserveCol border-p">
@@ -168,7 +171,7 @@
                             </div>
                         </div>
                         <div class="row my-5">
-                            <div class="offset-md-4 col-auto">
+                            <div class="offset-md-5 col-auto">
                                 <button type="button" class="btn btn-primary">Reserve</button>
                             </div>
                         </div>
@@ -226,6 +229,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
