--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
                         <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-                <span class="navbar-text">
+                <!-- <span class="navbar-text" id = "MyloginModal">
                     <a data-toggle="modal" data-target="#loginModal">
                     <span class="fa fa-sign-in"></span> Login</a>
+                </span> -->
+                <span class="navbar-text" id ="lmb">
+                    <a id="lmb">
+                        <!-- data-toggle="modal" data-target="#loginModal" -->
+                    <span class="fa fa-sign-in" id="loginbtn"></span> Login</a>
                 </span>
             </div>
             
@@ -88,7 +93,7 @@
                         <div class="col-12 col-sm-6 align-self-center my-5">
                                 <!-- <button type="button" class="btn btn-sm reserveCol"> -->
                                     <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="modal" data-target="#ReserveModal">Reserve Table</a>
+                        id="rmb">Reserve Table</a>
                                 <!-- </button> -->
                             </a>
                         </div>
@@ -431,7 +436,14 @@
                     $("#carouselButton").children("span").removeClass('fa-play');
                     $("#carouselButton").children("span").addClass('fa-pause');                    
                 }
+                
             });
+            $("#lmb").click(function(){
+                    $("#loginModal").modal('show');
+                });
+                $("#rmb").click(function(){
+                    $("#ReserveModal").modal('show');
+                });
         });
     </script>
 </body>
